--- a/package.json
+++ b/package.json
@@ -71,5 +71,8 @@
 		"zod": "3.20.2",
 		"zod-form-data": "1.2.4"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-multiselect": "8.3.0"
+	}
 }
