--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 	"type": "module",
 	"dependencies": {
 		"@paypal/paypal-js": "5.1.4",
+		"sirv-cli": "2.0.2",
 		"svelte-multiselect": "8.3.0"
 	}
 }
